     6- use the documented semantic for Euclidean division involving real t_QUAD
        e.g. x % y is x - floor(x/y)*y; for a t_QUAD x and t_INT y, we used
        to mod out y in "real" and "imaginary" part independently.
     7- [libpari] rename rootpadic -> polrootspadic
     8- polrootspadic: allow computing roots in unramified extension of Q_p

  Added
     1- new GP function rootsof1
BA   2- [libpari] F2xqX_halfgcd, FFX_halfgcd
     3- [libpari] uis2psp, uispsp
     4- [libpari] ZV_lcm
     5- [libpari] nfhyperellpadicfrobenius
     6- [libpari] rnf_get_ramified_primes
     7- allow nfinit([T, basis, ramified primes])
     8- allow nf.p, rnf.p [rational ramified primes]
     9- [libpari] idealfactor_partial
    10- add flag bit to ZM_snfall_i
    11- allow real t_QUAD in floor, ceil, divrem, %, \, \/
    12- [libpari] ff_parse_Tp

  Removed
     1- obsolete function rootsof1_kannan: use nfrootsof1

Done for version 2.12.0 (released 01/06/2019):
  Fixed
     1- memory leaks due to the use of varhigher/varlower
     2- memory leak on error in plots
     3- memory leak on error in newtoncharpoly
     4- heap-buffer-overflow in init_prefix [readline]
     5- mfsplit(mf,,flag) could return uninitialized objects => SEGV
     6- mfeisenstein(k,,chi) was treated as E(k,chi) instead of E(k,1,chi)
     7- poldegree(y/x) -> 0 [ instead of -1 ]
     8- sumeulerrat(y/x^2,1) -> junk
HC   9- incgam(-1000.4,2) -> SEGV
    10- mfatkininit(mfinit([366,2]),2) -> precision error
    11- forprimestep: wrong when wrapping word boundary (2^32 or 64) [#2071]
    12- mfbracket: [f,g]_m was multiplied by (-1)^m
    13- wrong results in mfatkininit / mfatkineigenvalues due to insufficient
        precision [#2073/#2074]
    14- issquare(Mod(x,ffinit(3,2))) -> wrong result [broken Fq_ispower]
    15- possible SEGV in rnfpseudobasis(, [pol,lim])
    16- wrong result in elllog over F_p, p in [2^63,2^64[
        p=13824553909862352061; A=8953655473130154624; B=9775907253961339458;