@@ -357,8 +357,8 @@
 29 (lfunlambda): 4.8989794855663561963945681494117827839*x^-1 + O(x^0)
 29 (lfunderivlambda): 9.7979589711327123927891362988235655679*x^-3 + O(x^0)
 29 (lfuncheckfeq): -125
-29 (lfunhardy): -0.23300237492132396248442589209445787109 + 0.88370872535843
-915306365540030722110823*I
+29 (lfunhardy): -0.36466842410981896568466950765779840745 + 1.38307889933471
+27324520029043839243324*I
 29 (lfunorderzero): 0
 29 (lfuntheta): 0.82431888141964267810269311237633779885
 29 (lfunan): [2, 2, 6, 8, 8, 16, 16, 14, 22, 24]
@@ -433,4 +433,4 @@
 34 (lfunorderzero): 0
 34 (lfuntheta): 1.7720013953042806303430908084396944474
 34 (lfunan): [1, 0, 5, 0, -9, 0, 20, 0, -5, 0]
-Total time spent: 3492
+Total time spent: 4276
