@@ -26,6 +26,9 @@ BA   1- plotlines flag was ignored
         to mod out y in "real" and "imaginary" part independently.
      7- [libpari] rename rootpadic -> polrootspadic
      8- polrootspadic: allow computing roots in unramified extension of Q_p
+     9- definition of lfunhardy for non-self-dual functions: remove
+        rootnumber, which is not well defined since it depends on the choice
+        of dual sequence a^*(n)
 
   Added
      1- new GP function rootsof1
